# yolo_rknn

./: demo.py
demo/: CMakeLists.txt
demo/include/: drone_objlocation.h  uav_position.h
demo/src/: demo.cpp  demo_geolocation.cpp  main.cpp  uav_position.cpp
example/: README.md  scaling_frequency.sh
example/utils/: CMakeLists.txt
example/yolov10/cpp/: CMakeLists.txt  build-linux.sh
example/yolov10/cpp/include/: yolov10.h
example/yolov10/cpp/src/: postprocess.cc  yolov10.cc  yolov10_image.cc
example/yolov5/: onnx2rknn.py
example/yolov8/yolov8_det/: pt2rknn.py
example/yolov8/yolov8_seg/: onnx2rknn.py
ptz_demo/: demo  gimbal.cc  gimbal.h  main.cpp  temp.cc
ptz_demo/so/: compile.sh  main  main.cpp  my-yuntai.py  tty.cpp  tty.h  xianfei.cpp  xianfei.h
yolo11/cpp/: CMakeLists.txt  yolo11_image_demo.cc  yolo11_videocapture_demo.cc
yolo11/cpp/yolo/include/: detector.h
yolo11/cpp/yolo/src/: detector.cc  main.cc
yolo11_bytetrack/cpp/: CMakeLists.txt  aair.h  drone_objlocation.cc  gimbal.cc  main.cc  postprocess.h  udp_data.h  yolo11_videocapture_demo.cc
yolo11_bytetrack/cpp/bytetrack/include/: BYTETracker.h  STrack.h
yolo11_bytetrack/cpp/bytetrack/src/: BYTETracker.cpp  STrack.cpp
yolo11_bytetrack/cpp/rknpu2/: yolo11_zero_copy.cc
yolo11_bytetrack/cpp/yolo/include/: detector.h
yolo11_bytetrack/cpp/yolo/src/: detector.cc
yolo11_bytetrack/model/: coco_80_labels_list.txt
yolov5/: pt2rknn.py
yolov5/cpp/: postprocess.cc  postprocess.h
yolov5/cpp/install/rk3588_linux/: yolov5_image_demo  yolov5_videocapture_demo
yolov5_bytetrack/cpp/: CMakeLists.txt  yolov5_videocapture_demo.cc
yolov5_deepsort/cpp/: CMakeLists.txt  yolov5_videocapture_demo.cc
(+3 files in other folders)
